--- a/styles/brief-introduction.module.css
+++ b/styles/brief-introduction.module.css
@@ -17,6 +17,7 @@
     width:300px;
     height:200px;
     display: flex;
+    color: #fff;
     align-items: center;
     justify-content: center;
     
