--- a/styles/Section.module.css
+++ b/styles/Section.module.css
@@ -1,8 +1,10 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 .herocontainer .background{
     object-fit: cover;
     height: 100%;
     width: 100%;
-    /* filter:brightness(.5); */
+    filter:brightness(0.7);
     position: fixed;
     z-index: -1;
 
@@ -14,15 +16,16 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, .2);
     object-fit: contain;
 }
 .herocontainer > h1{
     color: #fff;
-    font-size: 100px;
+    font-size: 128px;
     margin-top: -100px;
-    font-family: 'Dancing Script', cursive;
+    left: 100px;
+    font-family: 'Courgette', cursive;
+    position: relative;
 
 }
 .herocontainer > p{
