--- a/styles/searchform.module.css
+++ b/styles/searchform.module.css
@@ -2,20 +2,19 @@
     height: 80px;
     width: 850px;
     position: relative;
-
+    background-color: aliceblue;
     font-family: Microsoft JhengHei;
     font-weight: bold;
     font-size: 24pt;
+    border-radius: 30px;
 
-    background-color: aliceblue;
     padding: 1px;
     left:100px;
-    border-radius: 30px;
+    
     
     /* 水平、垂直置中 */
     display: flex;
-    justify-content: center;    
-    align-items: center; 
+    justify-content: center;   
 }
 
 .location,
@@ -23,5 +22,11 @@
 .button,
 .arrivetime,
 .leavetime{
-    margin: 20px;
+    height: 70px;
+    border: none;
+    background-color: transparent;
+    font: 14px/44px 'Inter';
+    outline: none;
+    text-align: center;
+    margin-bottom: 10px;
 }
