--- a/styles/Section.module.css
+++ b/styles/Section.module.css
@@ -23,15 +23,16 @@
     width: 850px;
     color: #fff;
     font-size: 96px;
-    left: 100px;
+    left: 5%;
+    margin-bottom: 3%;
     font-family: 'Courgette', cursive;
     position: relative;
 
 }
-
 .button {
     display: inline-block;
     padding: 0;
+    right: 5%;
     color: #000;
     text-decoration: none;
     background: 0 0;
@@ -39,14 +40,13 @@
     outline: 0;
     cursor: pointer;
 }
-.scroll-indicator {
+.scrollindicator {
     position: absolute;
     bottom: 0;
     
 }
 
-.scroll-indicator__label {
-    opacity: .7;
+.scrollindicatorlabel{
     display: block;
     margin-bottom: 2rem;
     font-size: 1rem;
@@ -56,56 +56,14 @@
 }
 
 
-.scroll-indicator__line{
+.scrollindicatorline{
     width: 2px;
     height: 5vh;
     background-color: #fff;
     transform-origin: center center;
-    opacity: .5;
     position: relative;
     left: 49%;
     
 }
 
-.translation{
-    color: #fff;
-    width: 10px;
-    right: 2.5%;
-    top: 2.5%;
-    font-size: 1.5rem;
-    position: absolute;
-    cursor: pointer;
 
-    
-}   
-.translation  :hover{
-    transform: scale(1.5);
-}
-
-@media screen and (max-width:960px){
-    .hero-container > h1{
-        font-size: 75px;
-        margin-top: -150px;
-    
-    }
-
-}
-
-@media screen and (max-width: 768px){
-    .hero-container > h1{
-        font-size: 50px;
-        margin-top: -100px;
-    
-    }
-    .hero-container > p{
-        font-size: 30px;
-    
-    }
-    .btn-mobile{
-        display: block;
-        text-decoration: none;
-    }
-    .btn{
-        width: 100%;
-    }    
-}
