--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,13 @@
+
 html,
 body {
+  top: 0px;
+  bottom: 0px;
+  min-height: 100vh;
+  min-width: 100vw;
   padding: 0;
-  margin: 0;
-  height: 100%;
-  width:100%;
-  position: relative;
+  margin: 0;  
+  position: absolute;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -14,8 +17,14 @@ a {
   text-decoration: none;
 }
 
-* {
+* { 
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
+}
+
+p{
+  margin: 0px;
 }
 
 @media (prefers-color-scheme: dark) {
