--- a/styles/loginform.module.css
+++ b/styles/loginform.module.css
@@ -9,9 +9,20 @@
     right: 50%;
     transform: translate(50%,-50%);
     border-radius: 50px;
+    
+    
 }
 
-
+.logo,
+.title,
+.block,
+.line1,
+.line2,
+.content,
+.checkbox{
+    margin-top:1rem;
+    margin-bottom: 1rem;
+}
 .logo {
     top: 40px;
 } 
@@ -25,6 +36,7 @@
 
 .block {
     margin-top: 5px; 
+    padding:10px;
 }
 .button, .block {
     top: 15px;
@@ -44,6 +56,8 @@
 .line1, .line2 {
     width: 300px;
     border: 1px solid black;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .line1 {
