--- a/styles/searchform.module.css
+++ b/styles/searchform.module.css
@@ -1,5 +1,5 @@
 .searchcontainer{
-    height: 80px;
+    height: 60px;
     width: 850px;
     position: relative;
     background-color: aliceblue;
@@ -7,10 +7,11 @@
     font-weight: bold;
     font-size: 16pt;
     border-radius: 30px;
-    left:100px;
+    left:5%;
     /* 水平置中 */
     display: flex;
     justify-content: center;   
+    align-items: center;
 }
 
 .location,
@@ -18,7 +19,7 @@
 .button,
 .arrivetime,
 .leavetime{ 
-    height: 80px;
+    height: 50px;
     border: none;
     background-color: transparent;
     width: 150px;
