--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,14 @@
-
-html,
+html{
+  height: 100%;
+  width:100%
+}
 body {
   top: 0px;
   bottom: 0px;
+  right:0px;
+  left:0px;
   min-height: 100vh;
-  min-width: 100vw;
+  min-width: 100%;
   padding: 0;
   margin: 0;  
   position: absolute;
