--- a/styles/Section.module.css
+++ b/styles/Section.module.css
@@ -6,7 +6,7 @@
     width: 100%;
     filter:brightness(0.7);
     position: fixed;
-    z-index: -1;
+    z-index: -2;
 
 }
 .herocontainer{
@@ -65,5 +65,13 @@
     left: 49%;
     
 }
-
+.mask{
+    height: 100%;
+    width:25%;
+    left:3%;
+    background-color: #000;
+    opacity: 0.4;
+    z-index: -1;
+    position: fixed;
+}
 
