--- a/styles/popularhotel.module.css
+++ b/styles/popularhotel.module.css
@@ -7,8 +7,7 @@
     left: 10%;
     font-size: 48px;
     width: 200px;
-    margin-bottom: 2%;
-    margin-top: 10%;
+    top: 10%;
     color: #fff;
 }
 .content{
@@ -16,13 +15,16 @@
     left:10%;
     width:300px;
     font-size: 24px;
-    margin:5px;
+    top:14%;
+    margin: 5px;
     color: #fff;
     margin-bottom: 5%;
 }
 .briefintroductionwrapper{
     position: relative;
     left: 10%;
+    top:16%;
     width:80%;
+    height: 40%;
     
 }
