--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,7 @@ body {
   min-height: 100vh;
   min-width: 100%;
   padding: 0;
+  background-color: #D9D9D9;
   margin: 0;  
   position: absolute;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
