--- a/styles/loginform.module.css
+++ b/styles/loginform.module.css
@@ -2,8 +2,8 @@
 
 .background {
     background: #d9d9d9;
-    height: 700px;
-    width: 450px;
+    height: 95%;
+    width: 420px;
     position: absolute;
     top: 50%;
     right: 50%;
@@ -22,56 +22,61 @@
     margin-bottom: 1rem;
 }
 .logo {
-    top: 20px;
+    top: 2%;
 } 
 
 .title {
-    top: -10px;
+    top: -1.2%;
     text-align: center;
     font-family: 'Courgette', cursive;
     font-size: 40px;
 }
 
 .block {
-    padding: 12px;
+    padding: 0.6rem;
     background: #ffffff;
-
+    width: 100%
+}
+.button {
+    width: 68%;
 }
 .button, .block {
-    height: 40px;
-    width: 300px;
+    height: 5%;
     border: none;
-    border-radius: 15px;
+    border-radius: 1rem;
     font-size: 18px;
     
 }
 
 .content {
-    width: 260px;
+    width: 62%;
 }
 
 .line1, .line2 {
-    width: 300px;
-    border: 1px solid black;
+    width: 72%;
+    border: 1px solid #333333;
     margin-left: auto;
     margin-right: auto;
 }
 
 .line1 {
-    margin-top: 25px;
+    margin-top: 7%;
+}
+.line2 {
+    margin-top: -3%;
 }
 
 .form {
-    width: 300px;
-    top: -10px;
+    width: 69%;
+    top: -2%;
 }
 
 .button2 {
-    width: 56px;
-    height: 56px;
+    width: 5%;
+    height: 5%;
     position: relative;
     left: 70%;
-    top: -66px;
+    top: -8%;
     border: none;
     background-color: #d9d9d9;
 
@@ -80,17 +85,17 @@
 .checkbox {
     height: 15px;
     width: 15px;
-    margin-top: 2px;
+    margin-top: 0.3rem;
 }
 .chcontent {
     font-size: 18px;
     font-weight: 650;
-    margin-top: 10px;
 }
+
 .link .content {
-    top: -15px;
-    margin-top: 5px;
-    margin-bottom: 15px;
+    top: -2%;
+    margin-top: 0%;
+    margin-bottom: 10px;
     color: #4CB6C5;
 }
 
