--- a/styles/search_result.module.css
+++ b/styles/search_result.module.css
@@ -9,6 +9,7 @@
     border-radius: 30px;
     color:black;
     display: flex;
+    
 }
 
 .img{
@@ -24,4 +25,12 @@
     font-size: 40px;
     font-weight: bold;
     position: relative;
+}
+
+.room,
+.location{
+    font-size: 24px;
+    position: relative;
+    top: 20px;
+    bottom: 20px;
 }
