--- a/styles/search_result.module.css
+++ b/styles/search_result.module.css
@@ -27,10 +27,28 @@
     position: relative;
 }
 
+.container{
+    display: flex;
+    margin-top: 80px;
+}
+
 .room,
 .location{
     font-size: 24px;
     position: relative;
-    top: 20px;
-    bottom: 20px;
+    margin-top: 10px;
+}
+
+.money,
+.time{
+    font-size: 24px;
+    margin-right: 70px;
+}
+
+.situation{
+    font-size: 36px;
+    font-weight: bold;
+    margin-left: 150px;
+    position: relative;
+    bottom: 10px;
 }
