--- a/styles/loginform.module.css
+++ b/styles/loginform.module.css
@@ -63,7 +63,7 @@
     margin-top: 7%;
 }
 .line2 {
-    margin-top: -3%;
+    margin-top: 0%;
 }
 
 .form {
@@ -76,7 +76,7 @@
     height: 5%;
     position: relative;
     left: 70%;
-    top: -8%;
+    top: -6%;
     border: none;
     background-color: #d9d9d9;
 
@@ -92,10 +92,13 @@
     font-weight: 650;
 }
 
-.link .content {
+.link2 .content {
+    color: #4CB6C5;
+}
+.link1 .content {
     top: -2%;
     margin-top: 0%;
-    margin-bottom: 10px;
+    /* margin-bottom: 1; */
     color: #4CB6C5;
 }
 
