--- a/styles/filter.module.css
+++ b/styles/filter.module.css
@@ -4,18 +4,17 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    width: 15%;
-    height:40vh;
+    width: 20%;
+    height:70vh;
     border-radius: 10px;
-    background-color: antiquewhite;
 }
 .title{
     
     margin: 10px;
 }
-.line1{
+.line{
     margin: 10px;
-    width: 50%;
+    width: 70%;
 }
 .optioncontainer{
     margin: 5px;
@@ -24,16 +23,59 @@
     justify-content: center;
     align-items: center;
 }
-.button{
-    margin-right: 10%;
-}
-.line2{
-    margin:10px;
-    width:50%;
-}
+.button {
+    display: inline-block;
+    border-radius: 4px;
+    border: none;
+    text-align: center;
+    font-size: 14px;
+    padding: 5px;
+    width: 50%;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+  }
+  
+  .button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+  
+  .button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -2%;
+    transition: 0.5s;
+  }
+  
+  .button:hover span {
+    padding-right: 15%;
+  }
+  
+  .button:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
+  
 .submit{
     position: relative;
-    left:30%;
-    width:20px;
-    height: 10px;
+    left:40%;
+    width: 20%;
+    padding: 5px;
+    margin: 5px;
+    background-color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.submit:active {
+    background-color: #d9d9d9;
+    box-shadow: 0 2px #666;
+    transform: translateY(2px);
+}
+.submit span{
+    font-size: 0.8rem;
 }
