--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -15,7 +15,7 @@ body {
   position: absolute;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-color:#D9D9D9; /*test*/
+  background-color: $background-color; /*test*/
 }
 
 a {
