--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,13 +1,13 @@
 // variables & functions
-@import 'functions';
-@import 'variables';
+// @import 'functions';
+// @import 'variables';
 
 // base & layout
 @import 'base';
-@import 'breakpoints';
-@import 'grid';
+// @import 'breakpoints';
+// @import 'grid';
 
-// // colors
+// // colorss
 // @import "colors";
 
 // components (button, card, navbar etc)
@@ -16,4 +16,4 @@
 // @import 'components/navbar';
 
 // utilities (margin, padding, opacity, etc)
-@import 'utilities';
+// @import 'utilities';
