--- a/styles/layout/_variables.scss
+++ b/styles/layout/_variables.scss
@@ -20,6 +20,9 @@ $font-size-sm: $base-font-size * 0.75;
 $font-size-lg: $base-font-size * 1.5;
 $font-size-xl: $base-font-size * 2;
 $font-size-xxl: $base-font-size * 3;
+$font-size-title: $base-font-size * 6;
 
 //font family
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 $heading-font: Microsoft JhengHei;
+$title-font: 'Courgette', cursive;
