--- a/styles/layout/home.module.scss
+++ b/styles/layout/home.module.scss
@@ -3,17 +3,17 @@
 @import 'variables';
 
 // base & layout
-@import 'breakpoints';
-@import 'grid';
+// @import 'breakpoints';
+// @import 'grid';
 
 // // colors
 // @import "colors";
 
 // components (button, card, navbar etc)
-@import '../components/home-info';
+@import '../components/home-intro';
 @import '../components/home-login-bt';
 @import '../components/home-searchform';
 @import '../components/home-section';
 
 // utilities (margin, padding, opacity, etc)
-@import 'utilities';
+// @import 'utilities';
