--- a/styles/Searchform_2.module.css
+++ b/styles/Searchform_2.module.css
@@ -5,6 +5,10 @@
     flex-direction: column;
     align-content: center;
     justify-content: center;
+
+    margin-left: 9.25%;
+    margin-top: 50px;
+    background-color: gray;
 }
 
 .first,
