--- a/styles/layout/home.module.scss
+++ b/styles/layout/home.module.scss
@@ -6,14 +6,13 @@
 // @import 'breakpoints';
 // @import 'grid';
 
-// // colors
-// @import "colors";
 
 // components (button, card, navbar etc)
 @import '../components/home-intro';
 @import '../components/home-login-bt';
 @import '../components/home-searchform';
 @import '../components/home-section';
+@import '../components/login-loginform'
 
 // utilities (margin, padding, opacity, etc)
 // @import 'utilities';
