--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -203,4 +203,77 @@
   left: 50%;
   z-index: 2;
   transform: translate(-50%, -50%);
+}
+
+.loginformcontainer {
+  background: #888888;
+  height: 95%;
+  width: 420px;
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  transform: translate(50%, -50%);
+  border-radius: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  padding-top: 2.5rem;
+  padding-bottom: 5rem;
+}
+.loginformcontainer .logo {
+  height: 80px;
+  width: 80px;
+}
+.loginformcontainer .title {
+  font-family: "Courgette", cursive;
+  font-size: 3rem;
+  text-align: center;
+}
+.loginformcontainer .button {
+  width: 68%;
+  margin-top: 1rem;
+}
+.loginformcontainer .block {
+  background: #ffffff;
+  width: 100%;
+  height: 2.5rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.loginformcontainer .button, .loginformcontainer .block {
+  border-radius: 15px;
+  font-size: 1rem;
+}
+.loginformcontainer .form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 69%;
+}
+.loginformcontainer .content {
+  width: 62%;
+}
+.loginformcontainer .checkbox {
+  height: 1rem;
+  width: 1rem;
+}
+.loginformcontainer .chcontent {
+  font-size: 1rem;
+  font-weight: 650;
+}
+.loginformcontainer .line {
+  margin-top: 1rem;
+  width: 70%;
+  border: 1px solid #333333;
+}
+.loginformcontainer .button2 {
+  width: 5%;
+  height: 5%;
+  border: none;
+  background-color: #d9d9d9;
+}
+.loginformcontainer .link .content {
+  color: #4CB6C5;
+  width: 100%;
 }/*# sourceMappingURL=home.module.css.map */
