--- a/styles/temp_css_save/loginform.module.css
+++ b/styles/temp_css_save/loginform.module.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 
-.background {
-    background: #d9d9d9;
+.loginformcontainer {
+    background: #333333;
+    
     height: 95%;
     width: 420px;
     position: absolute;
@@ -9,31 +10,35 @@
     right: 50%;
     transform: translate(50%,-50%);
     border-radius: 50px;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+
+    padding-top: 3rem;
+    padding-bottom: 5rem;
+
 }
 
-.logo,
-.title,
-.block,
-.line1,
-.line2,
-.content,
-.checkbox{
-    margin-top:1rem;
-    margin-bottom: 1rem;
+.form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
+
 .logo {
-    top: 2%;
+    height: 80px;
+    width: 80px;
 } 
 
 .title {
-    top: -1.2%;
     text-align: center;
     font-family: 'Courgette', cursive;
     font-size: 40px;
 }
 
 .block {
-    padding: 0.6rem;
     background: #ffffff;
     width: 100%
 }
@@ -41,7 +46,6 @@
     width: 68%;
 }
 .button, .block {
-    height: 5%;
     border: none;
     border-radius: 1rem;
     font-size: 18px;
@@ -55,28 +59,15 @@
 .line1, .line2 {
     width: 72%;
     border: 1px solid #333333;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.line1 {
-    margin-top: 7%;
-}
-.line2 {
-    margin-top: 0%;
 }
 
 .form {
     width: 69%;
-    top: -2%;
 }
 
 .button2 {
     width: 5%;
     height: 5%;
-    position: relative;
-    left: 70%;
-    top: -6%;
     border: none;
     background-color: #d9d9d9;
 
@@ -85,7 +76,6 @@
 .checkbox {
     height: 15px;
     width: 15px;
-    margin-top: 0.3rem;
 }
 .chcontent {
     font-size: 18px;
@@ -96,15 +86,7 @@
     color: #4CB6C5;
 }
 .link1 .content {
-    top: -2%;
-    margin-top: 0%;
-    /* margin-bottom: 1; */
     color: #4CB6C5;
 }
 
-.logo, .title, .button, .form, .content {
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-}
 
