--- a/styles/components/_home-searchform.scss
+++ b/styles/components/_home-searchform.scss
@@ -1,6 +1,6 @@
 .searchcontainer{
     height: 60px;
-    width: 850px;
+    
     position: relative;
     background-color: $secondary-color;
     font-family: $heading-font;
@@ -8,9 +8,24 @@
     font-size: $base-font-size;
     border-radius: 30px;
     left:5%;
+    
     display: flex;
     justify-content:space-evenly;   
     align-items: center;
+
+    @include sm {
+        width: 530px;
+    }
+    @include md {
+        width: 620px;
+    }
+    @include lg {
+        width: 850px;
+    }
+    @include xl {
+        width: 850px;
+    }
+    
 
     p{
         transform: translateY(-5%);
