--- a/styles/components/_home-section.scss
+++ b/styles/components/_home-section.scss
@@ -1,4 +1,4 @@
-.herocontainer{
+.homesectioncontainer{
     /*background: var(--img) center center/cover no-repeat;*/
     height: 100vh;
     width: 100%;
@@ -8,14 +8,20 @@
     box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, .2);
     object-fit: contain;
 
-    h1 {
-        width: 850px;
+    .webname {
         color: #fff;
-        font-size: $font-size-title;
         left: 5%;
         margin-bottom: 3%;
         font-family: $title-font;
         position: relative;
+        @include sm {
+            font-size: $font-size-sm-title;
+            width: 380px;
+        }
+        @include md {
+            font-size: $font-size-title;
+            width: 500px;
+        }
     }
 
     .background{
@@ -26,73 +32,85 @@
         position: fixed;
         z-index: -2;
     }
-}
-.scrollbutton {
-    display: inline-block;
-    padding: 0;
-    right: 5%;
-    color: #000;
-    text-decoration: none;
-    background: 0 0;
-    border: 0;
-    outline: 0;
-    cursor: pointer;
-}
 
-.scrollindicator {
-    position: absolute;
-    bottom: 0;
+    .scrollbutton {
+        display: inline-block;
+        padding: 0;
+        right: 5%;
+        color: #000;
+        text-decoration: none;
+        background: 0 0;
+        border: 0;
+        outline: 0;
+        cursor: pointer;
+
+        @include sm {
+            visibility: hidden;
+        }
+        @include md {
+            visibility: hidden;
+        }
+        @include lg {
+            visibility: visible;
+        }
+    }
     
-}
-
-.scrollindicatorlabel{
-    display: block;
-    margin-bottom: 2rem;
-    font-size: $base-font-size;
-    letter-spacing: .2em;
-    color: #fff;
-    text-transform: uppercase;
-}
-
-
-.scrollindicatorline{
-    width: 2px;
-    height: 5vh;
-    background-color: #fff;
-    transform-origin: center center;
-    position: relative;
-    left: 49%;
+    .scrollindicator {
+        position: absolute;
+        bottom: 0;
+        
+    }
     
-}
-.mask{
-    height: 100%;
-    width:35%;
-    left:3%;
-    z-index: -1;
-    background-color: #000;
-    opacity: 0.4;
-    position: fixed;
-}
-.mask1{
-    height: 100%;
-    background-color: #000;
-    opacity: 0.4;
-    z-index: 1;
-    width:100%;
-    position: fixed; 
-}
-.daypicker{
-    visibility: hidden;
-    position: absolute;
-}
-.daypicker1{
-    background-color: #fff;
-    border-radius: $base-border-radius;
-    padding: 40px;
-    position: absolute;
-    top:50%;
-    left: 50%;
-    z-index: 2;
-    transform: translate(-50%,-50%);
+    .scrollindicatorlabel{
+        display: block;
+        margin-bottom: 2rem;
+        font-size: $base-font-size;
+        letter-spacing: .2em;
+        color: #fff;
+        text-transform: uppercase;
+    }
     
+    
+    .scrollindicatorline{
+        width: 2px;
+        height: 5vh;
+        background-color: #fff;
+        transform-origin: center center;
+        position: relative;
+        left: 49%;
+        
+    }
+    .mask{
+        height: 100%;
+        width:35%;
+        left:3%;
+        z-index: -1;
+        background-color: #000;
+        opacity: 0.4;
+        position: fixed;
+    }
+    .mask1{
+        height: 100%;
+        background-color: #000;
+        opacity: 0.4;
+        z-index: 1;
+        width:100%;
+        position: fixed; 
+    }
+    .daypicker{
+        visibility: hidden;
+        position: absolute;
+    }
+    .daypicker1{
+        background-color: #fff;
+        border-radius: $base-border-radius;
+        padding: 40px;
+        position: absolute;
+        top:50%;
+        left: 50%;
+        z-index: 2;
+        transform: translate(-50%,-50%);
+        
+    }
 }
+
