--- a/styles/layout/_variables.scss
+++ b/styles/layout/_variables.scss
@@ -22,6 +22,7 @@ $font-size-lg: $base-font-size * 1.5;
 $font-size-xl: $base-font-size * 2;
 $font-size-xxl: $base-font-size * 3;
 $font-size-title: $base-font-size * 6;
+$font-size-sm-title: $base-font-size * 5;
 
 //font family
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
