--- a/styles/layout/home.module.scss
+++ b/styles/layout/home.module.scss
@@ -3,7 +3,7 @@
 @import 'variables';
 
 // base & layout
-// @import 'breakpoints';
+@import 'breakpoints';
 // @import 'grid';
 
 
@@ -12,7 +12,7 @@
 @import '../components/home-login-bt';
 @import '../components/home-searchform';
 @import '../components/home-section';
-@import '../components/login-loginform'
+@import '../components/login-loginform';
 
 // utilities (margin, padding, opacity, etc)
 // @import 'utilities';
