--- a/styles/components/_login-loginform.scss
+++ b/styles/components/_login-loginform.scss
@@ -1,6 +1,6 @@
 .loginformcontainer {
 
-    background: #888888;
+    background: #cccccc;
     
     height: 95%;
     width: 420px;
@@ -27,6 +27,7 @@
         font-family: $title-font;
         font-size: $font-size-xxl;
         text-align: center;
+        margin-top: -$base-font-size;
     }
 
     .button {
@@ -39,6 +40,7 @@
         height: 2.5rem;
         margin-top: $base-margin;
         margin-bottom: $base-margin;
+        padding-left: $base-padding;
     }
     .button, .block {
         border-radius: $base-border-radius * 0.75;
@@ -54,7 +56,8 @@
     }
 
     .content {
-        width: 62%;
+        width: 68%;
+        margin-top: $base-margin;
     }
 
     .checkbox {
@@ -68,7 +71,6 @@
 
     .line {
         margin-top: $base-margin;
-        // margin-bottom: $base-margin;
         width: 70%;
         border: 1px solid #333333;
     }
@@ -77,13 +79,16 @@
         width: 5%;
         height: 5%;
         border: none;
-        background-color: #d9d9d9;
+        background-color: none;
+        margin-left: 50%;
 
     }
 
     .link .content {
         color: #4CB6C5;
-        width: 100%;
+        width: 290px;
+        text-align: left;
+
     }
 
     
