--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -256,7 +256,7 @@
 }
 
 .loginformcontainer {
-  background: #888888;
+  background: #cccccc;
   height: 95%;
   width: 420px;
   position: absolute;
@@ -279,6 +279,7 @@
   font-family: "Courgette", cursive;
   font-size: 3rem;
   text-align: center;
+  margin-top: -1rem;
 }
 .loginformcontainer .button {
   width: 68%;
@@ -290,6 +291,7 @@
   height: 2.5rem;
   margin-top: 1rem;
   margin-bottom: 1rem;
+  padding-left: 0.75rem;
 }
 .loginformcontainer .button, .loginformcontainer .block {
   border-radius: 15px;
@@ -302,7 +304,8 @@
   width: 69%;
 }
 .loginformcontainer .content {
-  width: 62%;
+  width: 68%;
+  margin-top: 1rem;
 }
 .loginformcontainer .checkbox {
   height: 1rem;
@@ -321,9 +324,11 @@
   width: 5%;
   height: 5%;
   border: none;
-  background-color: #d9d9d9;
+  background-color: none;
+  margin-left: 50%;
 }
 .loginformcontainer .link .content {
   color: #4CB6C5;
-  width: 100%;
+  width: 290px;
+  text-align: left;
 }/*# sourceMappingURL=home.module.css.map */
