--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -257,12 +257,11 @@
 
 .loginformcontainer {
   background: #cccccc;
-  height: 95%;
+  height: 720px;
   width: 420px;
-  position: absolute;
-  top: 50%;
-  right: 50%;
-  transform: translate(50%, -50%);
+  position: relative;
+  margin: auto;
+  margin-top: 3rem;
   border-radius: 50px;
   display: flex;
   flex-direction: column;
@@ -289,8 +288,7 @@
   background: #ffffff;
   width: 100%;
   height: 2.5rem;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
   padding-left: 0.75rem;
 }
 .loginformcontainer .button, .loginformcontainer .block {
@@ -305,7 +303,6 @@
 }
 .loginformcontainer .content {
   width: 68%;
-  margin-top: 1rem;
 }
 .loginformcontainer .checkbox {
   height: 1rem;
@@ -316,19 +313,21 @@
   font-weight: 650;
 }
 .loginformcontainer .line {
-  margin-top: 1rem;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
   width: 70%;
   border: 1px solid #333333;
 }
 .loginformcontainer .button2 {
-  width: 5%;
-  height: 5%;
+  width: 50px;
+  height: 50px;
   border: none;
   background-color: none;
   margin-left: 50%;
 }
 .loginformcontainer .link .content {
   color: #4CB6C5;
-  width: 290px;
+  width: 286px;
+  margin-top: 0.75rem;
   text-align: left;
 }/*# sourceMappingURL=home.module.css.map */
