--- a/styles/Searchform_2.module.css
+++ b/styles/Searchform_2.module.css
@@ -24,3 +24,27 @@
     border-radius: 5px;
     font-weight:bolder; 
 }
+.btn{
+    padding:10px;
+    display: flex;
+    margin: 10px;
+    align-items: center;
+    justify-content: center;
+    background-color: #fff;
+    border-radius: 5px;
+    font-weight:bolder; 
+    position: relative;
+
+    background-color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+
+}
+.btn:active {
+    background-color: #d9d9d9;
+    box-shadow: 0 2px #666;
+    transform: translateY(2px);
+}
+.btn span{
+    font-size: 0.8rem;
+}
