--- a/styles/layout/home.module.scss
+++ b/styles/layout/home.module.scss
@@ -13,6 +13,9 @@
 @import '../components/home-searchform';
 @import '../components/home-section';
 @import '../components/login-loginform';
+@import '../components/userIndex-option';
+@import '../components/userIndex-setting';
+@import '../components/userIndex-section';
 
 // utilities (margin, padding, opacity, etc)
 // @import 'utilities';
