--- a/styles/layout/_base.scss
+++ b/styles/layout/_base.scss
@@ -22,8 +22,12 @@ a {
   color: inherit;
   text-decoration: none;
 }
-
-* { 
+#__next{
+  
+  height: 100%; 
+  position: relative; 
+}
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
