--- a/styles/search-section.module.css
+++ b/styles/search-section.module.css
@@ -1,22 +1,36 @@
 .hoteldata {
-    position: r;
-    left: 37%;
-    top: 10%;
+    position: relative;
 }
 
 .block{
     position: relative;
-    margin-top: 5%;
 }
 
 .text{
     position: relative;
-    margin-left:10%;
-    top: 40px;
+    margin-left: 5%;
+    
     color: white;
     font-weight: bold;
     font-size: 64px;
 }
+.bottomleftcontainer{
+    height:100%;
+    width:100%;
+    padding: 3%;
+    background-color: gray;
+}
 .bottomcontainer{
     display: flex;
+    height: 100%;
+    justify-content: space-between;
+}
+.topcontainer{
+    background-color: dimgrey;
+    display:flex;
+    justify-content: space-between;
+    padding: 1%;
+    align-items: center;
+    position: relative;
+    height: 20%;
 }
