--- a/styles/search_result.module.css
+++ b/styles/search_result.module.css
@@ -1,15 +1,13 @@
 
 .searchcontainer{
     position: relative;
-    left: 5%;
-    top: 10%;
-    height: 304px;
-    width: 952px;
     background:white;
     border-radius: 30px;
     color:black;
     display: flex;
     margin: 1rem;
+    height: 100%;
+    width: 100%;
     
 }
 
