--- a/styles/search-section.module.css
+++ b/styles/search-section.module.css
@@ -1,24 +1,36 @@
 .hoteldata {
-    position: relative;
+    margin-top: 2%;
+    position: absolute;
+    padding:2%;
+    height:100%;
+    width:80%;
+    right:0%;
+    top:20%;
+    z-index: -1;
 }
 
 .block{
     position: relative;
+    height:40%;
+    width:100%; 
 }
 
 .text{
     position: relative;
     margin-left: 5%;
-    
     color: white;
     font-weight: bold;
     font-size: 64px;
 }
 .bottomleftcontainer{
     height:100%;
-    width:100%;
     padding: 3%;
+    width: 20%;
+    position: fixed;
     background-color: gray;
+    top:20%;
+    display: flex;
+    flex-direction:column;
 }
 .bottomcontainer{
     display: flex;
@@ -29,8 +41,12 @@
     background-color: dimgrey;
     display:flex;
     justify-content: space-between;
-    padding: 1%;
+    padding: 2%;
+    position: fixed;
+    width: 100%;
     align-items: center;
-    position: relative;
     height: 20%;
+}
+.btnfilter{
+    margin: auto;
 }
