--- a/styles/filter.module.css
+++ b/styles/filter.module.css
@@ -1,12 +1,21 @@
-
+.containerhidden{
+    visibility: hidden;
+    z-index: -3;
+}
 .container{
     display:flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    width: 20%;
-    height:70vh;
     border-radius: 10px;
+    position: fixed;
+    width: 40%;
+    height: 50%;
+    top:50%;
+    left: 50%;
+    z-index: 2;
+    transform: translate(-50%,-50%);
+    background-color: #fff;
 }
 .title{
     
