--- a/styles/layout/home.module.scss
+++ b/styles/layout/home.module.scss
@@ -16,6 +16,7 @@
 @import '../components/userIndex-option';
 @import '../components/userIndex-setting';
 @import '../components/userIndex-section';
+@import '../components/hotelInfo-room';
 
 // utilities (margin, padding, opacity, etc)
 // @import 'utilities';
