--- a/styles/layout/home.module.scss
+++ b/styles/layout/home.module.scss
@@ -17,6 +17,11 @@
 @import '../components/userIndex-setting';
 @import '../components/userIndex-section';
 @import '../components/hotelInfo-room';
+@import '../components/search-filter';
+@import '../components/search-order';
+@import '../components/search-result';
+@import '../components/search-searchform';
+@import '../components/search-section';
 
 // utilities (margin, padding, opacity, etc)
 // @import 'utilities';
